# Verdict

./: README.md
docs/: Architecture.md  BIASES.md  Walkthrough.md
examples/summarization/: Report.md  baseline.json  dataset.yaml
llm-eval-toolkit/: PLAN.md
src/: __init__.py
src/verdict/: stats.py
src/verdict/core/: config.py
src/verdict/evaluators/: base.py
src/verdict/judge/: __init__.py  base.py  llm.py  normalize.py
src/verdict/providers/: base.py  cache.py
src/verdict/report/: render.py
tests/: test_judge_audit.py  test_probes.py
verdict/: README.md
verdict-demo/: LICENSE  pyproject.toml
verdict-demo/docs/: WALKTHROUGH.md
verdict-demo/src/verdict/judge/: audit.py  probes.py
verdict-demo/src/verdict/report/: Create new file.webloc
verdict/docs/: ARCHITECTURE.md
verdict/examples/summarization/: REPORT.md  baseline.json  config.concise.yaml  config.verbose.yaml  generate_report.py
verdict/src/verdict/: cli.py
verdict/src/verdict/core/: __init__.py  models.py  runner.py
verdict/src/verdict/evaluators/: __init__.py  judge.py  rule_based.py
verdict/src/verdict/judge/: jury.py  synthetic.py
verdict/src/verdict/providers/: __init__.py  litellm_provider.py  mock.py
verdict/src/verdict/report/: __init__.py
verdict/tests/: test_jury.py  test_normalize.py  test_rule_based.py  test_runner.py  test_stats.py
