[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verdict-evals"
version = "0.2.0"
description = "A small, model-agnostic LLM evaluation toolkit with a judge bias audit you can actually trust."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amarnath Reddy Chinthapalli" }]
keywords = ["llm", "evaluation", "llm-as-judge", "bias", "calibration", "agents", "rag"]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# Real model providers are optional; the toolkit runs fully offline with the mock provider.
providers = ["litellm>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
verdict = "verdict.cli:app"

[project.urls]
Homepage = "https://github.com/amarnathreddy5950/verdict"
Repository = "https://github.com/amarnathreddy5950/verdict"

[tool.hatch.build.targets.wheel]
packages = ["src/verdict"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
packages = ["verdict"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
